--- a/style.css
+++ b/style.css
@@ -123,53 +123,43 @@ main hr {
 .aboutMeSection {
     background-color: rgb(0, 0, 33);
     color: white;
-    padding: 0px 0;
+    padding: 20px; /* Adjust padding for smaller screens */
     text-align: center;
 }
 
 .aboutMeContent {
     display: flex;
-    align-items: center;
+    flex-wrap: wrap; /* Allow content to wrap to the next line on smaller screens */
     justify-content: center;
-    flex-wrap: wrap;
+    align-items: center;
 }
 
 .aboutMeText {
-    /* flex: 1; */
+    width: 100%; /* Take full width on smaller screens */
     text-align: center;
-    padding: 50px 200px;
+    padding: 20px; /* Adjust padding for smaller screens */
 }
 
 .profile-pic {
-    /* flex: 1; */
+    width: 100%; /* Take full width on smaller screens */
     text-align: center;
-    padding: 50px 200px;
+    padding: 20px; /* Adjust padding for smaller screens */
 }
 
 .profile-pic img {
-    width: 42%;
-    border-radius: 80%;
-    margin-left: 20px;
+    width: 100%; /* Adjust image width for smaller screens */
+    border-radius: 50%; /* Adjust border-radius for circular image */
 }
-
-
 
 .aboutMeSection h1 {
-    font-size: 40px;
-    /* margin: 0; */
-    /* padding: 20px 0; */
-    text-align: center;
+    font-size: 30px; /* Adjust font size for smaller screens */
+    margin-bottom: 10px; /* Add some margin at the bottom */
 }
 
-
-
 .aboutMeText p {
-    /* margin: 10px 20px; */
-    font-size: 1.5rem;
-    /* line-height: 1.5; */
-    text-align: center;
+    font-size: 1.2rem; /* Adjust font size for smaller screens */
     width: 100%;
-    /* padding: 0 40%; */
+    margin: 0; /* Remove default margin */
 }
 
 .purple {
